--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
-<?php
-echo "success"
-?>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Response</title>
+</head>
+<body>
+    <h1>THUNDER</h1>
+</body>
+</html>
